# cmake

001_HelloCMakeLists/: CMakeLists.txt  main.cpp
002_set/: CMakeLists.txt  main.cpp
01-单文件编译为可执行文件/: CMakeLists.txt  HelloWorld.cpp
01_start/: CMakeLists.txt  main.cpp
02-SwitchGenerator/: CMakeLists.txt  main.cpp
02_add_library/: CMakeLists.txt  main.cpp
02_add_library/utils/: CMakeLists.txt  utils.cpp  utils.h
03-BuildAndLinkStaticAndDynamicLibraries/: Message.cpp  Message.h  main.cpp
03-构建和链接静态库/: CMakeLists.txt
04-BuildAndLinkDynamicLibraries/: CMakeLists.txt  account.cpp  main.cpp
04-构建和链接动态库/: account.h
05-条件语句控制编译/: CMakeLists.txt  date.cpp  date.h  main.cpp
